Complete first blog

--- a/blog/2023-03-20-Test-blog.md
+++ b/blog/2023-03-20-Test-blog.md
@@ -6,8 +6,26 @@ authors: sburton
 tags: [burendo-handbook, introduction]
 ---
 
-Read on...
+What better for the first blog on the handbook than to tell you why the handbook was created and the purpose it serves?
 
 <!--truncate-->
 
-Details
+## So why did we create it?
+
+At Burendo, we have a useful staff handbook which details all the things you need to know about your employment at Burendo. We also have a [great website](https://www.burendo.com) which explains who we are as a company, what we can do and who we work with.
+
+However, we wanted somewhere that gives a flavour of what it is like to be a Burendoer. At Burendo, we believe we have a great culture an we want to try and give people a taste of that culture. That's when the idea of the Handbook was born. The Handbook is written by Burendoers and anyone in the company can contribute to it, so it's as authentic as it gets. This means the tone of voice, the words you read and anything else you see on the Handbook is direct from Burendoers, not from a marketing team or anyone else.
+
+## Why did we choose the tech we have?
+
+We researched a number of alternative technologies for the site itself, but [Docusaurus](https://docusaurus.io/) came out as the winner. It's easy to use, easy to understand and powerful enough to allow us to customise our Handbook as we want to. Based on the experience of our engineers within Burendo, we chose to use GitHub for the code and we chose to deploy to AWS as we are an AWS Partner as an organisation.
+
+Using GitHub means that any person can contribute to the Handbook - we can even have contributions from outside Burendo. The contribution process is simple:
+
+> Any person can raise a PR with their changes in Markdown files -> Engineering Community review the PR -> on merge, it goes live!
+
+## What is the future for the Handbook?
+
+We hope it will get bigger and bigger. We have two sections - one for private content that is for our Burendoers only and one for public content. We are transparent about this and we do this because there are some things (like interview questions and challenges) that shouldn't be available to everyone.
+
+We will be adding content over time around over Practices, our Communities, our events and outreach and much more so keep checking back to see what is new!
