--- a/blog/2023-03-20-Test-blog.md
+++ b/blog/2023-03-20-Test-blog.md
@@ -18,7 +18,7 @@ However, we wanted somewhere that gives a flavour of what it is like to be a Bur
 
 ## Why did we choose the tech we have?
 
-We researched a number of alternative technologies for the site itself, but [Docusaurus](https://docusaurus.io/) came out as the winner. It's easy to use, easy to understand and powerful enough to allow us to customise our Handbook as we want to. Based on the experience of our engineers within Burendo, we chose to use GitHub for the code and we chose to deploy to AWS as we are an AWS Partner as an organisation.
+We researched a number of alternative technologies for the site itself, but [Docusaurus](https://docusaurus.io/) emerged as the winner. It's easy to use, easy to understand and powerful enough to allow us to customise our Handbook as we want to. Based on the experience of our engineers within Burendo, we chose to use GitHub for the code and we chose to deploy to AWS as we are an AWS Partner as an organisation.
 
 Using GitHub means that any person can contribute to the Handbook - we can even have contributions from outside Burendo. The contribution process is simple:
 
