Revisit intro blog to not mention private content

--- a/blog/2023-03-20-Test-blog.md
+++ b/blog/2023-03-20-Test-blog.md
@@ -26,6 +26,4 @@ Using GitHub means that any person can contribute to the Handbook - we can even 
 
 ## What is the future for the Handbook?
 
-We hope it will get bigger and bigger. We have two sections - one for private content that is for our Burendoers only and one for public content. We are transparent about this and we do this because there are some things (like interview questions and challenges) that shouldn't be available to everyone.
-
-We will be adding content over time around over Practices, our Communities, our events and outreach and much more so keep checking back to see what is new!
+We hope it will get bigger and bigger. We will be adding content over time around over Practices, our Communities, our events and outreach and much more so keep checking back to see what is new!
